--- a/style/testimonial/style.css
+++ b/style/testimonial/style.css
@@ -87,6 +87,6 @@ figure:hover .img-user img {
         padding: 2em 3em 2em 2em;
     }
     .user-dif {
-        padding-top: 4em;
+        margin-top: 10em;
     }
 }
